Fix bug causing layout to overlap

--- a/public/src/less/style.less
+++ b/public/src/less/style.less
@@ -132,11 +132,6 @@ nav {
 }
 }
 
-main {
-	width: 100%;
-	height: 100%;
-}
-
 footer {
 	text-align: center;
 }
@@ -164,7 +159,6 @@ label div.thing {
 }
 
 .wrapper {
-	height: 100%;
 	width: 100%;
 	max-width: @maxwidth;
 	margin: 0 auto;
